shodrone.LPROG/src/main/java/genShowProposalRealData/ShowProposalRealDataParser.java
// Generated from C:/ISEP-PROJETOS/lapr4_projeto/shodrone.LPROG/src/main/java/antlr/ShowProposalRealData.g4 by ANTLR 4.13.2
package genShowProposalRealData;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;


@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class ShowProposalRealDataParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, GREETINGS=6, TITLE_PHRASE=7, PREFEREMCE_PHRASE=8, 
		SUBSCRIBE_PHRASE=9, LAST_PHRASE=10, REGARDS=11, LINE_1_FORMAT=12, REAL_VIP_LINE1=13, 
		LINE_2_FORMAT=14, REAL_LINE3=15, REAL_CLOSING_FORMAT=16, SHOW_DATE_FORMAT=17, 
		SHOW_DATE_REAL_LINE=18, FIGURE_ITEM_REAL=19, LINK=20, DRONE_ITEM_FORMAT=21, 
		DRONE_ITEM_REAL=22, GPS_LINE=23, GPS_LINE_REAL=24, ATTACHMENT_LINE=25, 
		ATTACHMENT_REAL=26, REFERENCE_LINE=27, REAL_REFERENCE=28, DATE=29, TIME_LINE=30, 
		TIME_REAL_LINE=31, DURATION_LINE=32, DURATION_MINUTES=33, DURATION_REAL_LINE=34, 
		PERSON_NAME=35, VAT_NUMBER=36, WORD=37, PAGE_BREAK=38, NEWLINE=39, ADDRESS_LINE=40;
	public static final int
		RULE_proposal = 0, RULE_header = 1, RULE_greeting = 2, RULE_companyInfo = 3, 
		RULE_personName = 4, RULE_realPersonName = 5, RULE_company = 6, RULE_realCompanyName = 7, 
		RULE_address = 8, RULE_realAddress = 9, RULE_vatNumber = 10, RULE_realVatNumber = 11, 
		RULE_reference = 12, RULE_realReference = 13, RULE_titleProposal = 14, 
		RULE_body = 15, RULE_line_1 = 16, RULE_normal_line1 = 17, RULE_vip_line1 = 18, 
		RULE_real_vip_line1 = 19, RULE_line_2 = 20, RULE_line_3 = 21, RULE_real_line3 = 22, 
		RULE_closing = 23, RULE_real_closing = 24, RULE_signature = 25, RULE_crmManagerName = 26, 
		RULE_realManagerName = 27, RULE_signature_option = 28, RULE_preferencePhrase = 29, 
		RULE_subscribePhrase = 30, RULE_lastPhrase = 31, RULE_regards = 32, RULE_showDetails = 33, 
		RULE_attachment = 34, RULE_real_attachment = 35, RULE_location = 36, RULE_location_real = 37, 
		RULE_date = 38, RULE_date_real = 39, RULE_time = 40, RULE_time_real = 41, 
		RULE_duration = 42, RULE_duration_real = 43, RULE_droneList = 44, RULE_droneListReal = 45, 
		RULE_figureList = 46, RULE_figureListReal = 47;
	private static String[] makeRuleNames() {
		return new String[] {
			"proposal", "header", "greeting", "companyInfo", "personName", "realPersonName", 
			"company", "realCompanyName", "address", "realAddress", "vatNumber", 
			"realVatNumber", "reference", "realReference", "titleProposal", "body", 
			"line_1", "normal_line1", "vip_line1", "real_vip_line1", "line_2", "line_3", 
			"real_line3", "closing", "real_closing", "signature", "crmManagerName", 
			"realManagerName", "signature_option", "preferencePhrase", "subscribePhrase", 
			"lastPhrase", "regards", "showDetails", "attachment", "real_attachment", 
			"location", "location_real", "date", "date_real", "time", "time_real", 
			"duration", "duration_real", "droneList", "droneListReal", "figureList", 
			"figureListReal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'CRM Manager'", "'#List of used drones'", "'#Lista de drones utilizados'", 
			"'#Lista de figuras'", "'#List of figures'", null, null, null, null, 
			"'Looking forward to hearing from you soon.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, "GREETINGS", "TITLE_PHRASE", "PREFEREMCE_PHRASE", 
			"SUBSCRIBE_PHRASE", "LAST_PHRASE", "REGARDS", "LINE_1_FORMAT", "REAL_VIP_LINE1", 
			"LINE_2_FORMAT", "REAL_LINE3", "REAL_CLOSING_FORMAT", "SHOW_DATE_FORMAT", 
			"SHOW_DATE_REAL_LINE", "FIGURE_ITEM_REAL", "LINK", "DRONE_ITEM_FORMAT", 
			"DRONE_ITEM_REAL", "GPS_LINE", "GPS_LINE_REAL", "ATTACHMENT_LINE", "ATTACHMENT_REAL", 
			"REFERENCE_LINE", "REAL_REFERENCE", "DATE", "TIME_LINE", "TIME_REAL_LINE", 
			"DURATION_LINE", "DURATION_MINUTES", "DURATION_REAL_LINE", "PERSON_NAME", 
			"VAT_NUMBER", "WORD", "PAGE_BREAK", "NEWLINE", "ADDRESS_LINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ShowProposalRealData.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ShowProposalRealDataParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProposalContext extends ParserRuleContext {
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ShowProposalRealDataParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ShowProposalRealDataParser.NEWLINE, i);
		}
		public ReferenceContext reference() {
			return getRuleContext(ReferenceContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public ClosingContext closing() {
			return getRuleContext(ClosingContext.class,0);
		}
		public SignatureContext signature() {
			return getRuleContext(SignatureContext.class,0);
		}
		public TerminalNode PAGE_BREAK() { return getToken(ShowProposalRealDataParser.PAGE_BREAK, 0); }
		public ShowDetailsContext showDetails() {
			return getRuleContext(ShowDetailsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ShowProposalRealDataParser.EOF, 0); }
		public ProposalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_proposal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalRealDataListener ) ((ShowProposalRealDataListener)listener).enterProposal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalRealDataListener ) ((ShowProposalRealDataListener)listener).exitProposal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalRealDataVisitor ) return ((ShowProposalRealDataVisitor<? extends T>)visitor).visitProposal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProposalContext proposal() throws RecognitionException {
		ProposalContext _localctx = new ProposalContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_proposal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			header();
			setState(97);
			match(NEWLINE);
			setState(98);
			reference();
			setState(99);
			match(NEWLINE);
			setState(100);
			match(NEWLINE);
			setState(101);
			body();
			setState(102);
			match(NEWLINE);
			setState(103);
			match(NEWLINE);
			setState(104);
			closing();
			setState(105);
			match(NEWLINE);
			setState(106);
			match(NEWLINE);
			setState(107);
			signature();
			setState(108);
			match(NEWLINE);
			setState(109);
			match(NEWLINE);
			setState(110);
			match(PAGE_BREAK);
			setState(111);
			match(NEWLINE);
			setState(112);
			match(NEWLINE);
			setState(113);
			showDetails();
			setState(114);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HeaderContext extends ParserRuleContext {
		public GreetingContext greeting() {
			return getRuleContext(GreetingContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(ShowProposalRealDataParser.NEWLINE, 0); }
		public CompanyInfoContext companyInfo() {
			return getRuleContext(CompanyInfoContext.class,0);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalRealDataListener ) ((ShowProposalRealDataListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalRealDataListener ) ((ShowProposalRealDataListener)listener).exitHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalRealDataVisitor ) return ((ShowProposalRealDataVisitor<? extends T>)visitor).visitHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			greeting();
			setState(117);
			match(NEWLINE);
			setState(118);
			companyInfo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GreetingContext extends ParserRuleContext {
		public TerminalNode GREETINGS() { return getToken(ShowProposalRealDataParser.GREETINGS, 0); }
		public GreetingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_greeting; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalRealDataListener ) ((ShowProposalRealDataListener)listener).enterGreeting(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalRealDataListener ) ((ShowProposalRealDataListener)listener).exitGreeting(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalRealDataVisitor ) return ((ShowProposalRealDataVisitor<? extends T>)visitor).visitGreeting(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GreetingContext greeting() throws RecognitionException {
		GreetingContext _localctx = new GreetingContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_greeting);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(GREETINGS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompanyInfoContext extends ParserRuleContext {
		public CompanyContext company() {
			return getRuleContext(CompanyContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ShowProposalRealDataParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ShowProposalRealDataParser.NEWLINE, i);
		}
		public AddressContext address() {
			return getRuleContext(AddressContext.class,0);
		}
		public VatNumberContext vatNumber() {
			return getRuleContext(VatNumberContext.class,0);
		}
		public PersonNameContext personName() {
			return getRuleContext(PersonNameContext.class,0);
		}
		public CompanyInfoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_companyInfo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalRealDataListener ) ((ShowProposalRealDataListener)listener).enterCompanyInfo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalRealDataListener ) ((ShowProposalRealDataListener)listener).exitCompanyInfo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalRealDataVisitor ) return ((ShowProposalRealDataVisitor<? extends T>)visitor).visitCompanyInfo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompanyInfoContext companyInfo() throws RecognitionException {
		CompanyInfoContext _localctx = new CompanyInfoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_companyInfo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PERSON_NAME) {
				{
				setState(122);
				personName();
				setState(123);
				match(NEWLINE);
				}
			}

			setState(127);
			company();
			setState(128);
			match(NEWLINE);
			setState(129);
			address();
			setState(130);
			match(NEWLINE);
			setState(131);
			vatNumber();
			setState(132);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PersonNameContext extends ParserRuleContext {
		public RealPersonNameContext realPersonName() {
			return getRuleContext(RealPersonNameContext.class,0);
		}
		public PersonNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_personName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalRealDataListener ) ((ShowProposalRealDataListener)listener).enterPersonName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalRealDataListener ) ((ShowProposalRealDataListener)listener).exitPersonName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalRealDataVisitor ) return ((ShowProposalRealDataVisitor<? extends T>)visitor).visitPersonName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PersonNameContext personName() throws RecognitionException {
		PersonNameContext _localctx = new PersonNameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_personName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			realPersonName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RealPersonNameContext extends ParserRuleContext {
		public TerminalNode PERSON_NAME() { return getToken(ShowProposalRealDataParser.PERSON_NAME, 0); }
		public RealPersonNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_realPersonName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalRealDataListener ) ((ShowProposalRealDataListener)listener).enterRealPersonName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalRealDataListener ) ((ShowProposalRealDataListener)listener).exitRealPersonName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalRealDataVisitor ) return ((ShowProposalRealDataVisitor<? extends T>)visitor).visitRealPersonName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RealPersonNameContext realPersonName() throws RecognitionException {
		RealPersonNameContext _localctx = new RealPersonNameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_realPersonName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(PERSON_NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompanyContext extends ParserRuleContext {
		public RealCompanyNameContext realCompanyName() {
			return getRuleContext(RealCompanyNameContext.class,0);
		}
		public CompanyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_company; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalRealDataListener ) ((ShowProposalRealDataListener)listener).enterCompany(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalRealDataListener ) ((ShowProposalRealDataListener)listener).exitCompany(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalRealDataVisitor ) return ((ShowProposalRealDataVisitor<? extends T>)visitor).visitCompany(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompanyContext company() throws RecognitionException {
		CompanyContext _localctx = new CompanyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_company);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			realCompanyName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RealCompanyNameContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(ShowProposalRealDataParser.WORD, 0); }
		public RealCompanyNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_realCompanyName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalRealDataListener ) ((ShowProposalRealDataListener)listener).enterRealCompanyName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalRealDataListener ) ((ShowProposalRealDataListener)listener).exitRealCompanyName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalRealDataVisitor ) return ((ShowProposalRealDataVisitor<? extends T>)visitor).visitRealCompanyName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RealCompanyNameContext realCompanyName() throws RecognitionException {
		RealCompanyNameContext _localctx = new RealCompanyNameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_realCompanyName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AddressContext extends ParserRuleContext {
		public RealAddressContext realAddress() {
			return getRuleContext(RealAddressContext.class,0);
		}
		public AddressContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_address; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalRealDataListener ) ((ShowProposalRealDataListener)listener).enterAddress(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShowProposalRealDataListener ) ((ShowProposalRealDataListener)listener).exitAddress(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShowProposalRealDataVisitor ) return ((ShowProposalRealDataVisitor<? extends T>)visitor).visitAddress(this);
			else return visitor.visitChildren(this);
		}
	}
